I finished editing the contact page now.

--- a/contact.html
+++ b/contact.html
@@ -6,16 +6,17 @@
     <title>Personal Website</title>
 </head>
 <body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
+<!-- This is the navigation bar -->
     <table cellpacing="150px">
         <tr>
             <td>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"><label for="">ABENEZER FEKADU</label></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for=""><a href="index.html">ABENEZER FEKADU</a></label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </td>
             <td>
-                &nbsp;&nbsp;&nbsp;&nbsp;<a href="blog.htm"><label for="">BLOG</label></a>&nbsp; &nbsp;
-                <a href="talks.html"><label for="">TASKS</label></a>&nbsp; &nbsp;
-                <a href="project.html"><label for="">GALLARY</label></a>&nbsp; &nbsp;
-                <a href="contact.html"><label for="">ABOUT / CONTACT</label></a>&nbsp; &nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.htm">BLOG</a></Label>&nbsp; &nbsp;
+                <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
+                <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
+                <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
                 <img src="./assets/images/Search_24px.png" alt="search icon">&nbsp; &nbsp;
                 <img src="./assets/images/Moon Symbol_24px.png" alt="moon icon">&nbsp; &nbsp;
                 <br><br>
@@ -24,6 +25,7 @@
         </tr>
     </table>
 
+<!-- The image in about me -->
     <table background="./assets/images/flower.jpg" width="100%" height="150px">
         <tr>
             <td>
@@ -31,14 +33,16 @@
             </td>
         </tr>
     </table>
+
+<!-- The story telling table of about me -->
     <table celspacing="20px">
         <tr>
             <td>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </td>
-            <td>
-                <p >I am originally from Atlanta, Georgia, and am a proud ramblin’ wreck from Georgia Tech. After college, I studied psychology and quantitative methods, receiving my Ph.D. from Vanderbilt University (2008). I am now a data scientist and professional educator at RStudio. Prior to that, I was an Assistant Professor at Arizona State University, and an Associate Professor at Oregon Health & Science University (OHSU).</p>
-            </td>
+                <td>
+                    <p >I am originally from small town called Balile, Eastern Hararge Ethiopia, and am a proud member of solvers group from second year students. After highschool, I am studing Software engineering, I joined Addis Ababa University in (2011). I am now a second year student and a member of DSC( Developers Student Club) which is undergraduate students community. Prior to that, I ued to have tours with my friends.</p>
+                </td>
             <td>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </td>
@@ -46,36 +50,41 @@
         <br>
         <tr>
             <td></td>
-            <td>
-                <p align="center"><img src="./assets/images/f.jpg" alt=""></p>
-            </td>
+                <td>
+                    <p align="center"><img src="./assets/images/friends.jpg" alt="me and my friends visiting holy place"></p>
+                </td>
             <td></td>
         </tr>
         <tr>
             <td></td>
-            <td>
-                <p>My research focused on health-related applications of Natural Language Processing-based methods, and was funded by the National Institutes of Health, the Oregon Clinical and Translational Research Institute, and Autism Speaks. I have written numerous scientific publications on autism and neurodevelopmental disorders and have presented my research at over 25 international conferences.</p>
-            </td>
+                <td>
+                    <p>As a student I have participated in many different clubs in order to browden my experience, like DSC, PCA, and others too. Up untill now I have not made any devolpment that have big inpact on the society, but my plan is to make a better society that have a good understanding of technology and it's impact by comming up with a solution from the knowledge that I have gathered through my life of learning. </p>
+                </td>
             <td></td>
         </tr>
         <tr>
             <td></td>
-            <td>
-                <p align="center"><img src="./assets/images/f.jpg" alt=""></p>
-            </td>
+                <td>
+                    <p align="center"><img src="./assets/images/bro2.jpg" alt="Picture with my brother"></p>
+                </td>
             <td></td>
         </tr>
         <tr>
             <td></td>
-            <td>
-                <p>While at OHSU, I became an avid user of the statistical programming language R, both in the lab as a Principal Investigator and in the classroom as a professor. I developed a passion for programming and education, and during my tenure at OHSU I developed and taught multiple graduate-level data science courses and workshops. I also trained the Office of Research Impact at the Oregon Clinical & Translational Research Institute to use R, and consulted with the University of Oregon College of Education on the development of a graduate data science specialization track. I received an Excellence in Education award from OHSU in 2018.</p>
-                <p>You can follow my current work for RStudio Education on GitHub. In my free time, I love spending time with my family and my two-year-old daughter. Thank you so much for reading.</p>
-                <br>
-                <hr color="red">
-            </td>
+                <td>
+                    <big>
+                        <label for="">Some Things About My Family</label>
+                    </big>
+                   
+                    <p>As I mentioned earlier my mother name is Azalech Ababa and she is a language teacher (specifically Amharic language). She has been teaching about 30 years now, so she is my roll model. As for father, his name is Fekadu Tefera and he is health officier, so most of the time he spent his time working in rural areas. Therefor we don't have family time more rapidly. But you should also have to know that I have a twin brother whose name is Natnael Fekadu. Since his age is the same as my age, me my brother are currently learning in Addis Ababa Universiy and he is studying medicine in order to be a doctor. As a whole I didn't have a sister, but I have many cousins that are like sisters to me. Finally I just want to say that my family are the parents that any kid could ever wish for. I Love My Family.</p>
+                    <p>You can follow my current work in AAIT on GitHub. In my free time, I love spending time with my family and reading books. Thank you so much for reading.</p><br>
+                    <hr color="red">
+                </td>
             <td></td>
         </tr>
     </table>
+
+<!-- Table for Exprience -->
         <table>
             <tr>
                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
@@ -98,9 +107,9 @@
                                 <table bgcolor="white">
                                     <tr>
                                         <td>
-                                            <h4>Data Scientist & Professional Educator</h4>
-                                            <p>RStudio</p>
-                                            <p>October 2018 – Present  Oregon</p>
+                                            <h4>Web Designer and Developer</h4>
+                                            <p>AAIT</p>
+                                            <p>March 2020 – Present  Addis Ababa &nbsp;</p>
                                         </td>
                                     </tr>
                                 </table>
@@ -108,9 +117,9 @@
                                 <table bgcolor="white">
                                     <tr>
                                         <td>
-                                            <h4>Data Scientist & Professional Educator</h4>
-                                            <p>RStudio</p>
-                                            <p>October 2018 – Present  Oregon</p>
+                                            <h4>Mobile App Programer</h4>
+                                            <p>AAIT</p>
+                                            <p>October 2019 – Present  Addis Ababa </p>
                                         </td>
                                     </tr>
                                 </table>
@@ -118,9 +127,9 @@
                                 <table bgcolor="white">
                                     <tr>
                                         <td>
-                                            <h4>Data Scientist & Professional Educator</h4>
-                                            <p>RStudio</p>
-                                            <p>October 2018 – Present  Oregon</p>
+                                            <h4>Software Developer</h4>
+                                            <p>Benafiab</p>
+                                            <p>October 2016– Present  Addis Ababa</p>
                                         </td>
                                     </tr>
                                 </table>
@@ -143,7 +152,7 @@
                     </td>
                 </tr>
             </table>
-
+<!-- Contact me Part -->
             <table>
                 <tr>
                     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
@@ -180,14 +189,16 @@
 
 
         <!-- <p align="center"><a href=""><img src="./assets/images/Double Right_30px_1.png" alt=""></a></p> -->
-<br>
+<!-- Footer part License -->
+        <br>
         <p align="center">
             <a href="">LICENSE:CC-BY-SA <br><br>
-                <img src="./assets/images/Creative Commons_21px.png" alt=""><img src="./assets/images/User Engagement Male_21px.png" alt=""><img src="./assets/images/Copyleft_21px.png" alt="">
+                <img src="./assets/images/Creative Commons_21px.png" alt="creative commons icon"><img src="./assets/images/User Engagement Male_21px.png" alt="user engagment icon"><img src="./assets/images/Copyleft_21px.png" alt="copyright icon">
             </a>
         </p>
-        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt=""></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt=""></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
+<!-- bottom links -->
+        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt=" code fork icon"></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
+        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt="up arrow icon"></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
 </body>
 </html>
