--- a/project.html
+++ b/project.html
@@ -9,23 +9,23 @@
     <body  bgcolor="FBF9F4"  alink="#ff0000" vlink="#ff0000" align="justify">
 
 <!-- This the navigation bar on the top with my name  -->
-        <table cellpacing="150px">
-            <tr>
-                <td>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="">ABENEZER FEKADU</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </td>
-                <td>
-                    &nbsp;&nbsp;&nbsp;&nbsp;<label for="">BLOG</label>&nbsp; &nbsp;
-                    <label for="">TALKS</label></a>&nbsp; &nbsp;
-                    <label for="">ABOUT</label></a>&nbsp; &nbsp;
-                    <label for="">CONTACT</label>&nbsp; &nbsp;
-                    <img src="./assets/images/Search_24px.png" alt="search icon">&nbsp; &nbsp;
-                    <img src="./assets/images/Moon Symbol_24px.png" alt="moon icon">&nbsp; &nbsp;
-                    <br><br>
-                    <hr color="red">
-                </td>
-            </tr>
-        </table>
+<table cellpacing="150px">
+    <tr>
+        <td>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for=""><a href="index.html">ABENEZER FEKADU</a></label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </td>
+        <td>
+            &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.html">BLOG</a></Label>&nbsp; &nbsp;
+            <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
+            <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
+            <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
+            <img src="./assets/images/Search_24px.png" alt="search icon">&nbsp; &nbsp;
+            <img src="./assets/images/Moon Symbol_24px.png" alt="moon icon">&nbsp; &nbsp;
+            <br><br>
+            <hr color="red">
+        </td>
+    </tr>
+</table>
 
 <!-- This is for the title project-->
             <h2 align="center">Projects</h2>
