--- a/talks.html
+++ b/talks.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
 </head>
-<body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
+<body  bgcolor="FBF9F4" alink="#ff0000" vlink="#ff0000" align="justify">
 <!-- The Navigation bar -->
     <table cellpacing="150px">
         <tr>
@@ -13,7 +13,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for=""><a href="index.html">ABENEZER FEKADU</a></label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </td>
             <td>
-                &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.htm">BLOG</a></Label>&nbsp; &nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.html">BLOG</a></Label>&nbsp; &nbsp;
                 <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
                 <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
                 <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
@@ -80,12 +80,12 @@
             <table>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt=""><br><br><br><br><br><br>
+                        <img src="./assets/images/rounded_corners (2).jpg" alt="android pic"><br><br><br><br><br><br>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt=""><br><br><br><br>
+                        <img src="./assets/images/rounded_corners (2).jpg" alt="web design pic"><br><br><br><br>
                     </td>
                 </tr>
             </table>
@@ -151,12 +151,12 @@
             <table>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt=""><br><br><br><br><br><br>
+                        <img src="./assets/images/rounded_corners (2).jpg" alt="Python pic"><br><br><br><br><br><br>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt=""><br><br><br><br>
+                        <img src="./assets/images/rounded_corners (2).jpg" alt="Photoshop pic"><br><br><br><br>
                     </td>
                 </tr>
             </table>
