I finished editing the blog page, now only the contact and task page are left.

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
 </head>
-<body  bgcolor="FBF9F4" alink="#ff0000" vlink="#ff0000" align="justify">
+<body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
 <!-- The navigation bar -->
     <table cellpacing="150px">
         <tr>
@@ -17,8 +17,8 @@
                 <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
                 <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
                 <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
-                <img src="./assets/images/Search_24px.png" alt="search icon">&nbsp; &nbsp;
-                <img src="./assets/images/Moon Symbol_24px.png" alt="moon icon">&nbsp; &nbsp;
+                <a href="google.com"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
+                <a href=""><img src="./assets/images/Moon Symbol_21px.png" alt="moon icon"></a>&nbsp; &nbsp;
                 <br><br>
                 <hr color="red">
             </td>
@@ -43,30 +43,30 @@
                 </tr>
                 <tr>
                     <td>
-                        <h4>Web Design and Development:</h4>
-                        <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
-                        <p>June 10, 2020  3 hours</p>
+                        <h4>Have a Slice:</h4>
+                        <p>Every one should have their meals three times a day, to maintain their health and to increase stamina.</p>
+                        <p>Jan 10, 2020  12:30</p>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <h4>Web Design and Development:</h4>
                         <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
-                        <p>June 10, 2020  3 hours</p>
+                        <p>Feb 13, 2020  3:40 </p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <h4>Web Design and Development:</h4>
-                        <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
-                        <p>June 10, 2020  3 hours</p>
+                        <h4>Be friends With Books:</h4>
+                        <p>Reading is one of the best ways of entertainment and aquiring knowledge, so be open minded all the time.</p>
+                        <p>Jan 29, 2020  5:20 </p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <h4>Web Design and Development:</h4>
-                        <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
-                        <p>June 10, 2020  3 hours</p>
+                        <h4>Food Is Necessary:</h4>
+                        <p>Try to enjoy as many meals as you can, by traveling all around the world. in addition learn more tradition by knowing the world.</p>
+                        <p>Feb 5, 2020 11:56 </p>
                     </td>
                 </tr>
             </table>
@@ -76,27 +76,27 @@
             <table>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="android pic"><br><br><br><br>
+                        <img src="./assets/images/rounded_corners (2).jpg" alt="workout pics"><br><br><br><br>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="web design pic"><br><br><br><br>
+                        <img src="./assets/images/slice (1).jpg" alt="food pics"><br><br><br><br>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="web design pic"><br><br><br><br>
+                        <img src="./assets/images/web.jpg" alt="web design pic"><br><br><br><br>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="web design pic"><br><br><br><br>
+                        <img src="./assets/images/books.jpg" alt="books pics"><br><br><br><br>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="web design pic"><br><br><br><br>
+                        <img src="./assets/images/slice (2).jpg" alt="food pics"><br><br><br><br>
                     </td>
                 </tr>
             </table>
