--- a/blog2.html
+++ b/blog2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
 </head>
-<body  bgcolor="FBF9F4" alink="#ff0000" vlink="#ff0000" align="justify">
+<body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
 <!-- The navigation bar -->
     <table cellpacing="150px">
         <tr>
@@ -13,12 +13,12 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for=""><a href="index.html">ABENEZER FEKADU</a></label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </td>
             <td>
-                &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.htm">BLOG</a></Label>&nbsp; &nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.html">BLOG</a></Label>&nbsp; &nbsp;
                 <label for=""><a href="talks.html">TASKS</a></label>&nbsp; &nbsp;
                 <label for=""></label><a href="project.html">GALLARY</a>&nbsp; &nbsp;
                 <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
-                <img src="./assets/images/Search_24px.png" alt="search icon">&nbsp; &nbsp;
-                <img src="./assets/images/Moon Symbol_24px.png" alt="moon icon">&nbsp; &nbsp;
+                <a href="google.com"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
+                <a href=""><img src="./assets/images/Moon Symbol_21px.png" alt="moon icon"></a>&nbsp; &nbsp;
                 <br><br>
                 <hr color="red">
             </td>
@@ -32,21 +32,20 @@
 <table cellpadding="70px" cellspacing=""20px>
     <tr>
         <td>
-            <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
         </td>
         <td>
             <table>
                 <tr>
                     <td>
-                        <h4>Introduction to Mobile Programing</h4>
-                        <p> two-weaks workshop to introduce the basics of mobile app and UI gesture, which makes mobile programing easy.</p>
-                        <p>April 18, 2020 6:00 AM — 10:00 PM . Addis Ababa, 5 killo</p> 
+                        <h4>Reading Is The Essence of Learnig:</h4>
+                        <p>Everything begins from self thought, so try to browden your mind by reading different books that are intersting.</p>
+                        <p>Feb 18, 2020 6:00 AM — 10:00 PM . Addis Ababa, 5 killo</p> 
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <h4>Web Design and Development:</h4>
-                        <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
+                        <h4>Change Through Running:</h4>
+                        <p>Your body moves before you think which a sign youcan do anything, run to achieve and full fill your goal.</p>
                         <p>June 10, 2020  3 hours</p>
                     </td>
                 </tr>
@@ -57,12 +56,12 @@
             <table>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="android pic"><br><br><br><br>
+                        <img src="./assets/images/books2.jpg" alt="books pics"><br><br><br><br>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="./assets/images/rounded_corners (2).jpg" alt="web design pic"><br><br><br><br>
+                        <img src="./assets/images/run.jpg" alt="running pics"><br><br><br><br>
                     </td>
                 </tr>
             </table>
